--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -2,6 +2,7 @@
     background-color: white;
     padding: 0.5rem 1rem;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+    border-radius: 8px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -9,4 +10,5 @@
 
 .navbar img {
     height: 4.7rem;
+    margin-left: 10px;
 }
